infra/prod-ingress-notls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress



spec:
  ingressClassName: nginx





  rules:
  - host: test.jzhang247.engineer
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-service
            port:
              number: 80
